# demo-app-flask

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  entrypoint.sh  pyproject.toml
.github/workflows/: python_deploy.yml
.pd/: .env.example  _build_deploy.sh  build_deploy.sh
app/: __init__.py  helpers.py  sqs.py  tasks.py
app/tasks/: __init__.py  models.py  sqs.py
app/tasks/templates/: tasks.html
migrations/versions/: 6a272fd74ba4_.py
